--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "sanitize-html": "^2.7.0",
-    "sass-loader": "^10"
+    "sass-loader": "^10",
+    "wicg-inert": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
